# ChangeLog for dev-libs/libisoburn
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.69 2011/04/13 20:16:31 maekke Exp $

  13 Apr 2011; Markus Meier <maekke@gentoo.org> libisoburn-1.0.0.ebuild:
  x86 stable, bug #355097

  11 Apr 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-0.5.0.ebuild,
  -libisoburn-1.0.4.ebuild:
  Remove old.

*libisoburn-1.0.6 (11 Apr 2011)

  11 Apr 2011; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.0.6.ebuild:
  Version bump. Switch to EAPI 4. Add static-libs USE flag.

  23 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> libisoburn-1.0.0.ebuild:
  ppc/ppc64 stable wrt #355097

  13 Mar 2011; Markus Meier <maekke@gentoo.org> libisoburn-1.0.0.ebuild:
  arm stable, bug #355097

*libisoburn-1.0.4 (10 Mar 2011)

  10 Mar 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.0.2.ebuild,
  +libisoburn-1.0.4.ebuild:
  Version bump. Remove old.

  08 Mar 2011; Tobias Klausmann <klausman@gentoo.org> libisoburn-1.0.0.ebuild:
  Stable on alpha, bug #355097

*libisoburn-1.0.2 (06 Mar 2011)

  06 Mar 2011; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.0.2.ebuild:
  Version bump.

  01 Mar 2011; Jeroen Roovers <jer@gentoo.org> libisoburn-1.0.0.ebuild:
  Stable for HPPA (bug #355097).

  24 Feb 2011; Daniel Pielmeier <billie@gentoo.org> libisoburn-1.0.0.ebuild:
  Raise required libburn and libisofs version.

  21 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libisoburn-1.0.0.ebuild:
  Stable on amd64 wrt bug #355097

*libisoburn-1.0.0 (18 Jan 2011)

  18 Jan 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-0.6.6.ebuild,
  -files/libisoburn-0.6.6-cflags.patch, +libisoburn-1.0.0.ebuild:
  Version bump. Remove old.

*libisoburn-0.6.6 (14 Dec 2010)

  14 Dec 2010; Daniel Pielmeier <billie@gentoo.org> -libisoburn-0.6.4.ebuild,
  +libisoburn-0.6.6.ebuild, +files/libisoburn-0.6.6-cflags.patch:
  Version bump. Remove old.
