@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST libisoburn-0.6.0.pl00.tar.gz 985540 RMD160 0c65e83f12409c44ea92a2a78a4bd92b1d299421 SHA1 6e488104bb88324c9a25ac687120f289204d0749 SHA256 ff03b70bc73a1a768e287dd8dd9b1fa754ec5bd4053fea1e970a388b117cc0e8
 DIST libisoburn-1.0.0.pl00.tar.gz 1038505 RMD160 5f538ba926ba4de4e6fbac609f1a8baed962f1e9 SHA1 65a4528eb18efa3a1381e4a9b5e2d5ee76705c92 SHA256 f067b02fee044da4a69686307900884e18a531a2b4beb316d3978d9d9717884f
 DIST libisoburn-1.0.6.pl00.tar.gz 1121527 RMD160 e090b50b8a05b7fdd8244bb2d08ab5dde1de9a47 SHA1 6dbf1bd85dfc2780130f0a61d032b257789005a4 SHA256 bec7445f8f2cf1709be2dab76d114a433805b61d590b7d5c24c6092a4bda0a78
-EBUILD libisoburn-0.6.0.ebuild 1755 RMD160 1942fdfc573a5b7707e72cbec07f7941b1aca180 SHA1 eda707954265e5101c5d6cd3a1a1f7d953afc01e SHA256 66ce7bfa87741c9bf67d0e5bc6e2707b224166655f8a8ae0c92bbca35a0c401a
 EBUILD libisoburn-1.0.0.ebuild 1853 RMD160 03a3b2dad8a5799a64f96651f2f0a5415b243557 SHA1 0b706ff010b308c9a08bcf0af9310255c2f9fa2a SHA256 814be3a20af9ed773c2f5a3e8f6fcc6cfa1c2fe43ece98b2cda4d298563a1a37
 EBUILD libisoburn-1.0.6.ebuild 1779 RMD160 6b207bbca2dd940739e879c764e80db6c083f712 SHA1 14c155173bb1974976c2e65fb19f7d00a87f43fc SHA256 f32d0fe4e2475b6129c358f7db0b56b7151d7c8dfcec2b9d43513326a1a8d055
-MISC ChangeLog 9887 RMD160 617d0ff904553ac345031362b6ba80ed34b0ea7c SHA1 f7c0e4d9d4336e17d124d68e6c87a6cdc465068a SHA256 273925326aeb45eb5bdc0e493cb08f3e5c0dcaca8bbed4d7ba6faa43e2680e17
+MISC ChangeLog 9980 RMD160 d1d195c44d56f6a9a6767fc4cee0b65802a5b7d2 SHA1 44091bf0548eac48dda130e1b381b202bf7dbba7 SHA256 3b1a72812d592f653e5e9de1dd295ce7602c35cbd34bee4fe9b544a10fc34ccc
 MISC metadata.xml 569 RMD160 7f21937a2bd12e36cca091e39b70b3d4a6b91db3 SHA1 412893206b8fbd0effccaae7e1450d5a9fbd52e3 SHA256 0a8b4c8015982b58dbfbc0eafce014b43d58164368bef85819c82b9c90edfe53
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2mBJkACgkQkKaRLQcq0GKjvwCeKqDILjkUc4T8OTNiEtSA+Q7C
-8jQAn2LjT79otgbx7cymikZQQlBkwjHI
-=XARP
+iEYEARECAAYFAk2mB30ACgkQlcuUeyFa0U1ziACfTt03EjGij0uAme/QYiKODKj1
+9F4AoLiZbl9SNimdjmiCfKDoRgCXSQ7N
+=3prk
 -----END PGP SIGNATURE-----
