@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libisoburn
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.69 2011/04/13 20:16:31 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.70 2011/04/13 20:28:33 billie Exp $
+
+  13 Apr 2011; Daniel Pielmeier <billie@gentoo.org> -libisoburn-0.6.0.ebuild:
+  Remove old.
 
   13 Apr 2011; Markus Meier <maekke@gentoo.org> libisoburn-1.0.0.ebuild:
   x86 stable, bug #355097
